linuxtips/day-5/nginx/k8s/service-ingress-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsvc2
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app2
