linuxtips/day-5/nginx/k8s/service-ingress-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsvc1
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app1
